# XenforoCppWrapper

./: .gitignore  CMakeLists.txt  README.md
examples/: login_example.cpp
include/xenforo/: Client.hpp  HttpClient.hpp  Types.hpp
src/: Client.cpp  HttpClient.cpp
xenforo-addon/RetteDasCode/UserUpgradeAPI/: README.md  Setup.php  addon.json
xenforo-addon/RetteDasCode/UserUpgradeAPI/Api/Controller/: UserUpgrade.php
xenforo-addon/RetteDasCode/UserUpgradeAPI/_data/: routes.xml
